Bug 270074 - Opening a link with left or middle click behaves differently
Summary: Opening a link with left or middle click behaves differently
Status: RESOLVED FIXED
Alias: None
Product: konversation
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.3.1
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Konversation Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-04-04 13:54 UTC by Beat Wolf
Modified: 2011-10-23 17:20 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Beat Wolf 2011-04-04 13:54:16 UTC
Version:           1.3.1
OS:                Linux

When opening a link in konversation with middle click, the url is encoded badly. Opening the link:
http://en.wikipedia.org/wiki/School%27s_Out_%28song%29
with a left click, opens it correctly in the browser (chrome). With a middle click, the url becomes: 
http://en.wikipedia.org/wiki/School%2527s_Out_%2528song%2529

Reproducible: Didn't try

Steps to Reproduce:
Open the link http://en.wikipedia.org/wiki/School%27s_Out_%28song%29 with a middle click from konversation

Actual Results:  
The browser opens:
http://en.wikipedia.org/wiki/School%2527s_Out_%2528song%2529

Expected Results:  
The browser should open:
http://en.wikipedia.org/wiki/School%27s_Out_%28song%29
Comment 1 Eike Hein 2011-10-23 17:20:32 UTC
Git commit ca0ec8d7c93853be21c93199e1d34937fde26ea2 by Eike Hein.
Committed on 23/10/2011 at 19:20.
Pushed by hein into branch 'master'.

Consistify URL transform behavior between left and middle click open.

BUG:270074

M  +3    -1    src/viewer/ircview.cpp

http://commits.kde.org/konversation/ca0ec8d7c93853be21c93199e1d34937fde26ea2