Consistify URL transform behavior between left and middle click open.

BUG:270074