src/viewer/ircview.cpp
@@ -2040,7 +2040,9 @@ void IRCView::mouseReleaseEvent(QMouseEvent *ev)
     {
         if (m_contextMenuOptions.testFlag(IrcContextMenus::ShowLinkActions))
         {
-            openLink(QUrl (m_urlToCopy));
+            // The QUrl magic is what QTextBrowser's anchorClicked() does internally;
+            // we copy it here for consistent behavior between left and middle clicks.
+            openLink(QUrl::fromEncoded(m_urlToCopy.toUtf8()));
             return;
         }
         else
